Fix modal not centering when on mobile

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -4,11 +4,18 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+} 
+@mixin absoluteCenterAbout
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     @media only screen and (max-width: 31.25em)
         {
             top: 40%;
         }
-} 
+}
 @mixin clearfix
 {
     &::after
